reuploaded contact.html

--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,14 @@
     <p>THANK GOD ANOTHER HUMAN! I've been trapped inside of this webpage for SUCH a long time. Are my children still alive? Do you have any gum?</p>
     <a href="index.html">[Back away slowly]</a>
     <hr>
-    <form action="mailto:leachericd@gmail.com" method="post" enctype="
-    ">
+    <form action="mailto:leachericd@gmail.com" method="post" enctype="text/plain">
 
 
     <label for="">Name:</label>
     <input type="text" name="userName" value=""><br>
     <label for="">Email:</label>
     <input type="email" name="userEmail" value=""><br>
-    <label for="">I'm a website! Wanna fight about it?!</label>
+    <label for="">I'm a website! Wanna fight about it?!</label><br>
     <textarea name="userMessage" rows="8" cols="80"></textarea><br>
     <input type="submit" name="">
     </form>
